updated width plots
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@202 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -608,8 +608,8 @@ On the contrary, both the Standard Model and Dark Matter partial width have comp
 \includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_A_gg100.eps}\\
 \includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg100.eps}
 \includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_P_gg100.eps}
-\caption{Minimal width for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=100$~\gev and $\mDM=10$~\gev.}
-%TODO indicate mMed=GammaMin in the plot (gDM = 6, gSM = 1.5 for V and gSM = gDM = 5 for S) 
+\caption{Minimal width for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=100$~\gev and $\mDM=10$~\gev.
+The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.} 
 \label{fig:monojet_width100}
 \end{figure}
 
@@ -619,8 +619,8 @@ On the contrary, both the Standard Model and Dark Matter partial width have comp
 \includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_A_gg1000.eps}\\
 \includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg1000.eps}
 \includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_P_gg1000.eps}
-\caption{Minimal width for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=1$~\tev and $\mDM=10$~\gev.}
-%TODO indicate mMed=GammaMin in the plot (gDM = 6, gSM = 1.5 for V and gSM = gDM = 5 for S) 
+\caption{Minimal width for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=1$~\tev and $\mDM=10$~\gev.
+The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.} 
 \label{fig:monojet_width1000}
 \end{figure}
 
