implement comments from Valya and add a reference
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@204 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -397,6 +397,39 @@
       reportNumber   = "IPPP-14-94, DCPT-14-188",
       SLACcitation   = "%%CITATION = ARXIV:1411.0535;%%",
 }
+@article{Fox:2012ru,
+      author         = "Fox, Patrick J. and Williams, Ciaran",
+      title          = "{Next-to-Leading Order Predictions for Dark Matter
+                        Production at Hadron Colliders}",
+      journal        = "Phys.Rev.",
+      number         = "5",
+      volume         = "D87",
+      pages          = "054030",
+      doi            = "10.1103/PhysRevD.87.054030",
+      year           = "2013",
+      eprint         = "1211.6390",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-12-612-T",
+      SLACcitation   = "%%CITATION = ARXIV:1211.6390;%%",
+}
+@article{Buchmueller:2014yoa,
+      author         = "Buchmueller, Oliver and Dolan, Matthew J. and Malik,
+                        Sarah A. and McCabe, Christopher",
+      title          = "{Characterising dark matter searches at colliders and
+                        direct detection experiments: Vector mediators}",
+      journal        = "JHEP",
+      volume         = "1501",
+      pages          = "037",
+      doi            = "10.1007/JHEP01(2015)037",
+      year           = "2015",
+      eprint         = "1407.8257",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-14-68, DCPT-14-136, SLAC-PUB-16033",
+      SLACcitation   = "%%CITATION = ARXIV:1407.8257;%%",
+}
+
 @ARTICLE{Chang:2014,
   AUTHOR       = "Spencer Chang and Ralph Edezhath and Jeffrey Hutchinson and Markus Luty",
   TITLE        = "{Effective WIMPs}",
