implement comments from Valya and add a reference
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@205 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -9,8 +9,8 @@ Since NLO calculations are available for the process in \powheg, we recommend to
 
 For a spin-0 mediator, the top-quark loop is the most important
 consideration.
-The matrix element implementation of the \schannel spin-0 mediated DM production is available in \powheg with the full top-loop calculation at LO\,\cite{Haisch:2015ioa}.
-The \powheg implementation includes the finite
+The matrix element implementation of the \schannel spin-0 mediated DM production is available in \mcfm~\cite{Fox:2012ru,Harris:2014hga} and \powheg~\cite{Haisch:2015ioa} with the full top-loop calculation at LO.
+The \powheg and \mcfm implementations include the finite
 top quark mass dependence for DM pair production with 1 parton at LO.
 For consistency with the spin-1 generation, we recommend using \powheg
 for this case as well.
