add spaces to MadGraph etc. when used in text
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@206 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -66,40 +66,40 @@
 \newcommand{\eg}{{\it e.g.}}
 \newcommand{\lag}{{\cal L}} 
 \newcommand{\gmu}{\gamma^\mu}
-\newcommand{\feynrules}{{\sc FeynRules}}
-\newcommand{\madgraph}{{\sc MadGraph}}
-\newcommand{\madevent}{{\sc MadEvent}}
-\newcommand{\madgraphFiveaMCNLO}{\texttt{MadGraph5\_aMC@NLO}}
-\newcommand{\madanalysis}{{\sc MadAnalysis}}
-\newcommand{\powheg}{{\sc POWHEG}}
-\newcommand{\mcfm}{{\sc MCFM}}
-\newcommand{\fewz}{{\sc Fewz}}
-\newcommand{\hathor}{{\sc Hathor}}
-\newcommand{\pythia}{{\sc Pythia}}
-\newcommand{\pythiaEight}{{\sc Pythia~8}}
-\newcommand{\tauola}{{\sc Tauola}}
-\newcommand{\delphes}{{\sc Delphes}}
-\newcommand{\fastjet}{{\sc FastJet}}
-\newcommand{\bornsuppfact}{\texttt{bornsuppfact}}
-\newcommand{\bornktmin}{\texttt{bornktmin}}
-\newcommand{\runningwidth}{\texttt{runningwidth}}
-\newcommand{\masslow}{\texttt{mass\_low}}
-\newcommand{\masshigh}{\texttt{mass\_high}}
-\newcommand{\ncallOne}{\texttt{ncall1}}
-\newcommand{\ncallTwo}{\texttt{ncall2}}
-\newcommand{\itmxOne}{\texttt{itmx1}}
-\newcommand{\itmxTwo}{\texttt{itmx2}}
-\newcommand{\foldsci}{\texttt{foldsci}}
-\newcommand{\foldy}{\texttt{foldy}}
-\newcommand{\foldphi}{\texttt{foldphi}}
-\newcommand{\withnegweights}{\texttt{withnegweights}}
-\newcommand{\LOevents}{\texttt{LOevents}}
-\newcommand{\bornonly}{\texttt{bornonly}}
-\newcommand{\modelDMV}{\texttt{DMV}}
-\newcommand{\modelDMA}{\texttt{DMA}}
-\newcommand{\modelDMS}{\texttt{DMS}}
-\newcommand{\modelDMP}{\texttt{DMP}}
-\newcommand{\modelDMStloop}{\texttt{DMS\_tloop}}
+\newcommand{\feynrules}{{\sc FeynRules}\xspace}
+\newcommand{\madgraph}{{\sc MadGraph}\xspace}
+\newcommand{\madevent}{{\sc MadEvent}\xspace}
+\newcommand{\madgraphFiveaMCNLO}{\texttt{MadGraph5\_aMC@NLO}\xspace}
+\newcommand{\madanalysis}{{\sc MadAnalysis}\xspace}
+\newcommand{\powheg}{{\sc POWHEG}\xspace}
+\newcommand{\mcfm}{{\sc MCFM}\xspace}
+\newcommand{\fewz}{{\sc Fewz}\xspace}
+\newcommand{\hathor}{{\sc Hathor}\xspace}
+\newcommand{\pythia}{{\sc Pythia}\xspace}
+\newcommand{\pythiaEight}{{\sc Pythia~8}\xspace}
+\newcommand{\tauola}{{\sc Tauola}\xspace}
+\newcommand{\delphes}{{\sc Delphes}\xspace}
+\newcommand{\fastjet}{{\sc FastJet}\xspace}
+\newcommand{\bornsuppfact}{\texttt{bornsuppfact}\xspace}
+\newcommand{\bornktmin}{\texttt{bornktmin}\xspace}
+\newcommand{\runningwidth}{\texttt{runningwidth}\xspace}
+\newcommand{\masslow}{\texttt{mass\_low}\xspace}
+\newcommand{\masshigh}{\texttt{mass\_high}\xspace}
+\newcommand{\ncallOne}{\texttt{ncall1}\xspace}
+\newcommand{\ncallTwo}{\texttt{ncall2}\xspace}
+\newcommand{\itmxOne}{\texttt{itmx1}\xspace}
+\newcommand{\itmxTwo}{\texttt{itmx2}\xspace}
+\newcommand{\foldsci}{\texttt{foldsci}\xspace}
+\newcommand{\foldy}{\texttt{foldy}\xspace}
+\newcommand{\foldphi}{\texttt{foldphi}\xspace}
+\newcommand{\withnegweights}{\texttt{withnegweights}\xspace}
+\newcommand{\LOevents}{\texttt{LOevents}\xspace}
+\newcommand{\bornonly}{\texttt{bornonly}\xspace}
+\newcommand{\modelDMV}{\texttt{DMV}\xspace}
+\newcommand{\modelDMA}{\texttt{DMA}\xspace}
+\newcommand{\modelDMS}{\texttt{DMS}\xspace}
+\newcommand{\modelDMP}{\texttt{DMP}\xspace}
+\newcommand{\modelDMStloop}{\texttt{DMS\_tloop}\xspace}
 \newcommand{\schannel}{\ensuremath{s-\text{channel}}\xspace}
 \newcommand{\tchannel}{\ensuremath{t-\text{channel}}\xspace}
 
