Emanuele's changes/additions
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@208 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -66,20 +66,20 @@
 \newcommand{\eg}{{\it e.g.}}
 \newcommand{\lag}{{\cal L}} 
 \newcommand{\gmu}{\gamma^\mu}
-\newcommand{\feynrules}{{\sc FeynRules}\xspace}
-\newcommand{\madgraph}{{\sc MadGraph}\xspace}
-\newcommand{\madevent}{{\sc MadEvent}\xspace}
+\newcommand{\feynrules}{{\namecaps{FeynRules}}\xspace}
+\newcommand{\madgraph}{{\namecaps{MadGraph}}\xspace}
+\newcommand{\madevent}{{\namecaps{MadEvent}}\xspace}
 \newcommand{\madgraphFiveaMCNLO}{\texttt{MadGraph5\_aMC@NLO}\xspace}
-\newcommand{\madanalysis}{{\sc MadAnalysis}\xspace}
-\newcommand{\powheg}{{\sc POWHEG}\xspace}
-\newcommand{\mcfm}{{\sc MCFM}\xspace}
-\newcommand{\fewz}{{\sc Fewz}\xspace}
-\newcommand{\hathor}{{\sc Hathor}\xspace}
-\newcommand{\pythia}{{\sc Pythia}\xspace}
-\newcommand{\pythiaEight}{{\sc Pythia~8}\xspace}
-\newcommand{\tauola}{{\sc Tauola}\xspace}
-\newcommand{\delphes}{{\sc Delphes}\xspace}
-\newcommand{\fastjet}{{\sc FastJet}\xspace}
+\newcommand{\madanalysis}{{\namecaps{MadAnalysis}}\xspace}
+\newcommand{\powheg}{{\namecaps{POWHEG}}\xspace}
+\newcommand{\mcfm}{{\namecaps{MCFM}}\xspace}
+\newcommand{\fewz}{{\namecaps{Fewz}}\xspace}
+\newcommand{\hathor}{{\namecaps{Hathor}}\xspace}
+\newcommand{\pythia}{{\namecaps{Pythia}}\xspace}
+\newcommand{\pythiaEight}{{\namecaps{Pythia~8}}\xspace}
+\newcommand{\tauola}{{\namecaps{Tauola}}\xspace}
+\newcommand{\delphes}{{\namecaps{Delphes}}\xspace}
+\newcommand{\fastjet}{{\namecaps{FastJet}}\xspace}
 \newcommand{\bornsuppfact}{\texttt{bornsuppfact}\xspace}
 \newcommand{\bornktmin}{\texttt{bornktmin}\xspace}
 \newcommand{\runningwidth}{\texttt{runningwidth}\xspace}
@@ -100,11 +100,12 @@
 \newcommand{\modelDMS}{\texttt{DMS}\xspace}
 \newcommand{\modelDMP}{\texttt{DMP}\xspace}
 \newcommand{\modelDMStloop}{\texttt{DMS\_tloop}\xspace}
-\newcommand{\schannel}{\ensuremath{s-\text{channel}}\xspace}
-\newcommand{\tchannel}{\ensuremath{t-\text{channel}}\xspace}
+\newcommand{\schannel}{\ensuremath{s\text{-channel}}\xspace}
+\newcommand{\tchannel}{\ensuremath{t\text{-channel}}\xspace}
 
 % math
 
+\newcommand{\complexi}{\ensuremath{i}\xspace}
 \newcommand{\gsim}{ \mathop{}_{\textstyle \sim}^{\textstyle >} }
 \newcommand{\lsim}{ \mathop{}_{\textstyle \sim}^{\textstyle <} }
 \newcommand{\bra}[1]{\langle #1|}
